--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ footer.demo {
 
 .all-products .single-item {
     min-width: 350px;
-    transition: 0.4s ease-in-out all;
+    transition: all 0.4s ease-in-out;
 }
 
 .all-products .single-item .thumb {
@@ -307,4 +307,8 @@ footer.demo {
     width: 100%;
     max-height: 60vh;
     margin-bottom: 25px;
+}
+
+.all-products .single-item .blog-style-one {
+    transition: all 0.4s ease-in-out;
 }
