--- a/style.css
+++ b/style.css
@@ -1,4 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner:wght@400;500;600&display=swap');
+/* fallback */
+@font-face {
+    font-family: 'Material Symbols Outlined';
+    font-style: normal;
+    font-weight: 600;
+    src: url('assets/css/google-icons.woff2') format('woff2');
+}
+
+.material-symbols-outlined {
+    font-family: 'Material Symbols Outlined';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    -moz-font-feature-settings: 'liga';
+    -moz-osx-font-smoothing: grayscale;
+}
 
 img {
     object-fit: cover;
@@ -324,3 +347,56 @@ footer .logo {
 footer ul.social {
     margin-top: 5px
 }
+
+.service-images-swiper .swiper-slide img {
+    /* width: 100px; */
+    height: 100px;
+}
+
+.service-images-swiper .swiper-pagination {
+    position: relative;
+    bottom: -10px
+}
+
+.service-images-swiper .swiper-nav-next, .service-images-swiper .swiper-nav-prev {
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    margin: 0 7px;
+    background-color: #104cba;
+    color: white;
+    margin-top: 25px;
+    height: fit-content;
+    padding: 2px 17px;
+    border: 2px solid #104cba;
+    transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.3s;
+}
+
+.service-images-swiper .swiper-nav-next:hover, .service-images-swiper .swiper-nav-prev:hover {
+    background-color: white;
+    color: #104cba;
+}
+
+.service-images-swiper .swiper-nav-next span, .service-images-swiper .swiper-nav-prev span {
+    font-size: 26px !important;
+}
+
+.service-images-swiper .service-images-nav {
+    display : flex;
+    justify-content: center;
+    gap: 4px;
+}
+
+.service-images {
+    margin: 35px 0;
+}
+
+.service-images .service-images-swiper .swiper-slide {
+    width: fit-content !important;
+    /* margin-left: 20px;
+    margin-right: 20px; */
+}
+
+/* .service-images-swiper .swiper-button-next {
+
+} */
