Updated the product images in the home page, updated the home page content

--- a/style.css
+++ b/style.css
@@ -404,6 +404,11 @@ footer ul.social {
     justify-content: center;
 }
 
-/* .service-images-swiper .swiper-button-next {
+.home-services-list li img {
+    opacity: 1 !important;
+}
 
-} */
+.process-area {
+    padding-top: 70px;
+    padding-bottom: 70px;
+}
