--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3266,6 +3266,7 @@ a {
   text-transform: uppercase;
   margin-bottom: 20px;
   font-size: 22px;
+  text-align: right;
 }
 
 @media only screen and (max-width: 767px) {
